some explaining comments

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+// injects frontend production build jar into spring boot application jar
 bootJar {
 	dependsOn ':frontend:frontendJar'
 	classpath tasks.getByPath(':frontend:frontendJar')
